<resources>
    <string name="app_name">Space Delivery App</string>

    <string name="empty" />

    <!-- Error messages -->
    <string name="error_general_message">Error! Please try again.</string>
    <string name="error_internet_connection">No internet connection! Please try again.</string>

    <!-- General -->
    <string name="welcome">Welcome!!</string>
    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favourites</string>

    <!-- Create Space Vehicle Screen -->
    <string name="create_space_vehicle_button">CREATE SPACE VEHICLE</string>
    <string name="create_space_vehicle_remaning_points">Remaining Points:</string>
    <string name="create_space_vehicle_name">Name</string>
    <string name="create_space_vehicle_strength">Strength</string>
    <string name="create_space_vehicle_speed">Speed</string>
    <string name="create_space_vehicle_capacity">Capacity</string>

    <!-- Home Screen -->
    <string name="home_ugs">UGS:  %1$d</string>
    <string name="home_eus">EUS: %1$d</string>
    <string name="home_ds">DS: %1$d</string>
    <string name="home_space_station_travel_button">Travel</string>
    <string name="home_search_space_station_text">Search station</string>
    <string name="home_starting_travel_text">The trip is starting</string>

    <!-- Favorite Station Screen -->
    <string name="favorite_stations_title">Favourite Stations</string>
    <string name="favorite_list_empty">No results were found</string>

</resources>